--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,10 @@
             "@/pages/*": [
                 "./pages/*"
             ],
+            "@/assets/*": [
+                "./img/*",
+                "./svgs/*"
+            ],
         }
     }
 }
