--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,9 @@
             "@/pages/*": [
                 "./pages/*"
             ],
+            "@/hooks/*": [
+                "./hooks/*"
+            ],
         }
     }
 }
